--- a/src/members/_members.desktop.scss
+++ b/src/members/_members.desktop.scss
@@ -44,3 +44,9 @@ ux-dialog.config-member-stories {
     width: 400px;
 }
 
+ul.deceased-list {
+    width: 100%;
+    height: calc(100vh - 280px);
+    overflow: auto;
+}
+
