start doc segments

--- a/src/stories/_stories.scss
+++ b/src/stories/_stories.scss
@@ -22,7 +22,7 @@ div.big-story-panel {
     overflow: auto;
     height: 100%;
     p {
-        font-size: 110%;
+        //font-size: 110%;
         text-align: justify;
         padding-bottom: 2px;
     }
