--- a/src/home/_home.mobile.scss
+++ b/src/home/_home.mobile.scss
@@ -16,8 +16,8 @@
     flex-wrap: wrap;
     flex-direction: row;
     span {
-        width: 230px;
-        height: 140px;
+        width: 100%;
+        //height: 140px;
     }
 }
 
