--- a/src/home/_home.mobile.scss
+++ b/src/home/_home.mobile.scss
@@ -16,7 +16,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     span {
-        width: 100%;
+        width: 100vw;
         //height: 140px;
     }
 }
