--- a/src/home/_home.mobile.scss
+++ b/src/home/_home.mobile.scss
@@ -15,8 +15,9 @@
     display:flex;
     flex-wrap: wrap;
     flex-direction: row;
+    width: 100vw;
     span {
-        width: 100vw;
+        width: 100%;
         //height: 140px;
     }
 }
