--- a/src/docs/_docs.scss
+++ b/src/docs/_docs.scss
@@ -54,3 +54,32 @@ div.doc-frame {
         height: calc(100vh - 250px);
     }
 }
+
+div#doc-story {
+    button.seg-button {
+        padding: 0;
+        float:right;
+        font-size:larger;
+        border:solid 1px lightblue;
+        border-radius:4px;
+        span {
+            color:#0f0f0f;
+        }
+    }
+    ul.segment-list {
+        width:410px;
+        li {
+            border-bottom:solid 1px lightgrey;
+            height:24px;
+            &.new-segment {
+                font-weight: bold;
+            }
+            a {
+                cursor: pointer;
+                span {
+                    float: right;
+                }
+            }
+        }
+    }
+}
