--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -141,7 +141,7 @@ div.family-buttons {
 .family-chains {
     overflow: auto;
     button {
-        min-width: 130px;
+        min-width: 130px;.גק
         border-radius:5px;
     }
     a {
@@ -164,7 +164,7 @@ div.family-buttons {
             box-shadow: 5px 5px lightgray;
         }
         &.dead {
-            border: solid 2px black;
+            border: solid 3px black;
         }
 
     }
