--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -141,7 +141,7 @@ div.family-buttons {
 .family-chains {
     overflow: auto;
     button {
-        min-width: 130px;.גק
+        min-width: 130px;
         border-radius:5px;
     }
     a {
