--- a/src/docs/_docs.scss
+++ b/src/docs/_docs.scss
@@ -55,6 +55,10 @@ div#doc-story {
     &.show-segments {
         height: calc(100vh - 350px);
     }
+    div.doc-story {
+        //height: calc(100vh - 500px);
+        overflow: auto;
+    }
 }
 
 div.doc-frame {
@@ -87,12 +91,13 @@ div#doc-story {
         }
     }
     ul.segment-list {
-        width:450px;
-        max-height: 180px;
+        width:570px;
+        max-height: 300px;
         overflow: auto;
+        font-size: large;
         li {
             border-bottom:solid 1px lightgrey;
-            height:24px;
+            height:30px;
             display: flex;
             justify-content: space-between;
             &.new-segment {
