photo uploader - started

--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -167,7 +167,7 @@ div.family-buttons {
             box-shadow: 5px 5px lightgray;
         }
         &.dead {
-            border: solid 3px black;
+            border: solid 3px #040404;
         }
 
     }
