--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@ $navbar-default-link-active-bg: inherit;
 @import 'resources/elements/photo-strip';
 @import 'resources/elements/quiz/quiz';
 @import 'resources/elements/quick-login';
+@import 'resources/elements/photo-uploader/photo-uploader';
 
 /* Globals */
 html, body {
