--- a/src/resources/elements/photo-uploader/photo-uploader.scss
+++ b/src/resources/elements/photo-uploader/photo-uploader.scss
@@ -3,7 +3,7 @@
 }
 
 .custom-file-input::before {
-    content: 'בחרו תמונה';
+    content: attr(data-content);
     display: inline-block;
     background: linear-gradient(top, #f9f9f9, #e3e3e3);
     border: 1px solid #999;
