--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -143,6 +143,8 @@ div.family-buttons {
 
 .family-chains {
     overflow: auto;
+    display: flex;
+    flex-direction:column;
     button {
         min-width: 130px;
         border-radius:5px;
